# Quant-System

./: .coverage  .env.example  .gitattributes  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.githooks/: pre-push
.github/workflows/: ci.yml
apps/: bunfig.toml  package.json
apps/android/: gradle.properties  settings.gradle.kts
apps/mobile/: .gitignore  README.md  app.json  package.json
apps/shared/: package.json  tsconfig.json
apps/web/: PROGRESS.md  README.md  index.html  package.json  playwright.config.ts  start.bat  start.sh  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
data/research/: baseline_ic_series.json  large_universe.txt  memory.json  universe.txt
doc/: api-reference-en.md  api-reference-zh.md  architecture-review.md  developer-guide-en.md  developer-guide-zh.md  quickstart-zh.md  user-guide-en.md  user-guide-zh.md
docker/autoresearch/: Dockerfile  Dockerfile.agent  Dockerfile.evaluator  docker-compose.yml  eval_server.py  init.ps1  watchdog.py
docs/: ARCHITECTURE_REVIEW_2026Q1.md  CICD_explained.md  DEVELOPMENT_LOG.md  PHASE_TRACKER.md  README.md  SYSTEM_OVERVIEW.md  api-reference-zh.md  developer-guide-zh.md  user-guide-zh.md
docs/architecture/: ANDROID_APP_PLAN.md  AUTOMATED_ALPHA_ARCHITECTURE.md  MULTI_ASSET_ARCHITECTURE.md  WEB_ARCHITECTURE_V2.md
docs/autoresearch/: DATA_CONTRACT_INVENTORY.md  RUNBOOK.md
docs/claude/: ARCHITECTURE.md  BUG_HISTORY.md  CHECKLISTS.md  EXPERIMENT_STANDARDS.md  LESSONS_FOR_AUTONOMOUS_AGENTS.md  PROMOTION_POLICY.md  SYSTEM_STATUS_REPORT.md
docs/dev/: APP_STABILITY_TESTING_REPORT.md  ARCHITECTURE_REVIEW_2026Q1.md  AUDIT_REPORT.md  AUTOMATED_ALPHA_ARCHITECTURE.md  CODE_REVIEW_REPORT.md  DATA_SOURCE_EVALUATION.md  DEVELOPMENT_LOG.md  DEVELOPMENT_PLAN.md  FRONTEND_AUDIT.md  MULTI_ASSET_ARCHITECTURE.md  PERSONAL_USE_GAP_REPORT.md  PHASE_TRACKER.md  PLAN_VS_REALITY.md  SYSTEM_STATUS_REPORT.md  frontend-roadmap.md  progress-report.md
docs/evaluations/: BROKER_API_EVALUATION.md  PERSONAL_USE_GAP_REPORT.md
docs/guides/: autoresearch-guide-zh.md  user-guide-zh.md
docs/paper-trading/: 2026-03-31_daily.md
docs/plans/: NEXT_ACTIONS.md  PLAN_STATUS.md  phase-a-infrastructure.md  phase-aa-strategy-construction.md  phase-ab-factor-level-pbo.md  phase-ac-validator-overhaul.md  phase-an-architecture.md  (+32 more)
migrations/: env.py
scripts/: README.md  _launch_backup.bat  _launch_server.bat  _launch_watchdog.bat  alpha_research_agent.py  autostart.py  backfill_twse_institutional.py  check_data_completeness.py  cross_source_validate.py  daily_smoke_test.py  download_finlab_batch.py  download_finlab_data.py  download_finmind_data.py  download_yahoo_price.py  download_yahoo_prices.py  experiment13.py  experiment_composite_hedge.py  experiment_cross_category.py  experiment_final.py  experiment_full_validation.py  experiment_institutional.py  experiment_multi_factor.py  experiment_regime_hedge.py  full_factor_analysis.py  generate_hypotheses.md  graduation_check.py  hypothesis_generator_prompt.txt  import_finlab_to_master.py  large_scale_factor_analysis.py  large_scale_factor_check.py  migrate_data_dirs.py  monitor_research.sh  paper_monitor.py  paper_trading_monitor.py  paper_vs_backtest.py  run_alpha_pipeline_test.py  run_dual_factor_test.py  run_dual_factor_validator.py  run_factor_analysis.py  run_factor_refinement.py  (+14 more)
src/: __main__.py  config.py  logging_config.py  metrics.py
strategies/: README.md  mean_reversion.py  momentum.py  multi_factor.py  multi_strategy_combo.py  pairs_trading.py  revenue_momentum.py  revenue_momentum_hedged.py  sector_rotation.py  trust_follow.py
tests/: conftest.py
(+900 files in other folders)
